@@ -246,6 +246,9 @@
 	Wrapped option names with single quotes in the man page to make it easier
 	to search for options by their names.
 
+	Display error on failed conversion to Unicode (say if file name includes
+	broken UTF-8 sequence).  Thanks to Svyatoslav Mishyn (a.k.a. juef).
+
 	Fixed search messages in menus (nth time...).
 
 	Fixed automatic finishing in some situation when no terminal is available.
